--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
+  "name": "praxis-by-surface-tension",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@react-three/drei": "^10.7.4",
-    "@react-three/fiber": "^9.3.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "framer-motion": "^12.23.12",
-    "gsap": "^3.13.0",
-    "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^6.30.1",
-    "three": "^0.179.1",
-    "vite": "^7.1.4"
+    "react-draggable": "4.4.6",
+    "framer-motion": "^11.3.19",
+    "@google/genai": "^1.15.0",
+    "recharts": "^3.1.2"
   },
-  "scripts": {
-    "start": "vite"
+  "devDependencies": {
+    "@types/node": "^22.14.0",
+    "typescript": "~5.8.2",
+    "vite": "^6.2.0"
   }
 }
