Update repository to reflect proprietary nature and commercial intent
- Updated README.md with clear proprietary software notices and restrictions
- Added comprehensive LICENSE file with proprietary terms and conditions
- Updated package.json with proper metadata and proprietary license designation
- Added security warnings and unauthorized access disclaimers
- Clarified commercial monetization intent and intellectual property protection
- Removed open source references and MIT license badges
- Added contact information for licensing inquiries

--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "praxis-by-surface-tension",
+  "name": "praxis-ai",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "description": "AI-Powered Operating System for Creative Entrepreneurs - Proprietary Software",
+  "author": "Praxis AI",
+  "license": "PROPRIETARY",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
