Update company information to Surface Tension LLC
- Updated README.md copyright to Surface Tension LLC
- Updated LICENSE file with Surface Tension LLC as the company
- Updated package.json author field to Surface Tension LLC
- Ensured proper legal protection under company entity
- Maintained proprietary software status and restrictions

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "type": "module",
   "description": "AI-Powered Operating System for Creative Entrepreneurs - Proprietary Software",
-  "author": "Praxis AI",
+  "author": "Surface Tension LLC",
   "license": "PROPRIETARY",
   "scripts": {
     "dev": "vite",
