feat: enhance dashboard with stunning visuals and fix loading sequence
- Added PraxisPreview component with animated logo and particle effects
- Fixed app flow: Praxis preview → loading → login → dashboard
- Created EnhancedDashboard with Three.js particle system and 3D background
- Integrated notes, today/tomorrow tabs into unified daily greeting
- Added responsive mobile optimization with proper viewport handling
- Implemented animated floating particles and gradient overlays
- Enhanced UI/UX with smooth transitions and hover effects
- Added philosophical daily quotes for inspiration
- Optimized performance by hiding 3D background on mobile devices
- Fixed type errors and improved code quality

--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
   },
   "dependencies": {
     "@google/genai": "^1.15.0",
-    "framer-motion": "^11.3.19",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.3.0",
+    "@types/three": "^0.180.0",
+    "framer-motion": "^11.18.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-draggable": "4.4.6",
-    "recharts": "^3.1.2"
+    "recharts": "^3.1.2",
+    "three": "^0.180.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.8.0",
