--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-three/fiber": "^9.3.0",
     "@types/three": "^0.180.0",
     "framer-motion": "^11.18.2",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-draggable": "4.4.6",
