--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@notionhq/client": "^5.2.0",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.3.0",
+    "@supabase/supabase-js": "^2.75.0",
     "@types/three": "^0.180.0",
     "deepgram": "^1.0.3",
     "framer-motion": "^11.18.2",
@@ -40,7 +41,10 @@
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.3",
     "@vitest/ui": "^3.2.4",
+    "autoprefixer": "^10.4.21",
     "jsdom": "^27.0.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.14",
     "typescript": "~5.8.2",
     "vite": "^6.2.0",
     "vitest": "^3.2.4"
