chore: migrate Tailwind to Vite/PostCSS, import CSS, fix PostCSS ESM config, harden Supabase client

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "three": "^0.180.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.16",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -53,7 +54,7 @@
     "autoprefixer": "^10.4.21",
     "jsdom": "^27.0.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.14",
+    "tailwindcss": "^4.1.16",
     "tsx": "^4.20.6",
     "typescript": "~5.8.2",
     "vite": "^6.2.0",
